--- a/Models/-VC/2025.02.06_GenVC.md
+++ b/Models/-VC/2025.02.06_GenVC.md
@@ -740,3 +740,69 @@ The timbre of the speakers is the same, their speaking styles match perfectly, a
 \end{enumerate}
 
 \end{document}
+
+## References
+
+[^Qian2019A}uto{VC]: {{A}uto{VC}: Zero-Shot Voice Style Transfer With Only Autoencoder Loss}. International Conference on Machine Learning 2019.
+[^Zhang2020Gazev]: {GAZEV: GAN-Based Zero-Shot Voice Conversion Over Non-Parallel Speech Corpus}. Interspeech 2020 2020.
+[^Zhang2022Sig-Vc]: {SIG-VC: A Speaker Information Guided Zero-Shot Voice Conversion System for Both Human Beings and Machines}. IEEE International Conference on Acoustics, Speech and Signal Processing 2022.
+[^Sisman2020An]: {An Overview of Voice Conversion and Its Challenges: From Statistical Modeling to Deep Learning}. IEEE Transactions on Audio, Speech, and Language Processing 2020.
+[^Mary2006Prosodic]: {Prosodic Features for Speaker Verification}. Ninth International Conference on Spoken Language Processing 2006.
+[^Li2023FreeVC]: {FreeVC: Towards High-Quality Text-Free One-Shot Voice Conversion}. IEEE International Conference on Acoustics, Speech and Signal Processing 2023.
+[^Li2024The]: {The Database and Benchmark for the Source Speaker Tracing Challenge 2024}. IEEE Spoken Language Technology Workshop (SLT) 2024.
+[^Cao2024NeuralVC]: {NeuralVC: Any-to-Any Voice Conversion Using Neural Networks Decoder for Real-Time Voice Conversion}. IEEE Signal Processing Letters 2024.
+[^Cai2023Identifying]: {Identifying Source Speakers for Voice Conversion Based Spoofing Attacks on Speaker Verification Systems}. IEEE International Conference on Acoustics, Speech and Signal Processing 2023.
+[^Cai2024Privacy]: {Privacy Versus Emotion Preservation Trade-Offs in Emotion-Preserving Speaker Anonymization}. IEEE Spoken Language Technology Workshop (SLT) 2024.
+[^Tan2021Zero-Shot]: {Zero-Shot Voice Conversion With Adjusted Speaker Embeddings and Simple Acoustic Features}. IEEE International Conference on Acoustics, Speech and Signal Processing 2021.
+[^Casanova2022YourTTS]: {YourTTS: Towards Zero-Shot Multi-Speaker TTS and Zero-Shot Voice Conversion for Everyone}. International Conference on Machine Learning 2022.
+[^Choi2021Neural]: {Neural Analysis and Synthesis: Reconstructing Speech From Self-Supervised Representations}. Advances in Neural Information Processing Systems 2021.
+[^Choi2023Nansy++]: {NANSY++: Unified Voice Synthesis With Neural Analysis and Synthesis}. International Conference on Learning Representations 2023.
+[^Betker2023Better]: {Better Speech Synthesis Through Scaling}. arXiv:2305.07243.
+[^Wang2023Lm-Vc]: {LM-VC: Zero-Shot Voice Conversion via Speech Generation Based on Language Models}. IEEE Signal Processing Letters 2023.
+[^Kreuk2023AudioGen]: {AudioGen: Textually Guided Audio Generation}. International Conference on Learning Representations 2023.
+[^Wu2024Towards]: {Towards Audio Language Modeling-an Overview}. arXiv:2402.13236.
+[^Borsos2023AudioLM]: {AudioLM: A Language Modeling Approach to Audio Generation}. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2023.
+[^Zeghidour2021SoundStream]: {SoundStream: An End-to-End Neural Audio Codec}. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2021.
+[^Kharitonov2023Speak,]: {Speak, Read and Prompt: High-Fidelity Text-to-Speech With Minimal Supervision}. Transactions of the Association for Computational Linguistics 2023.
+[^Peng2024V}oice{C}raft]: {V}oice{C}raft: Zero-Shot Speech Editing and Text-to-Speech in the Wild. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics 2024.
+[^Du2024CosyVoice]: {CosyVoice 2: Scalable Streaming Speech Synthesis With Large Language Models}. arXiv:2412.10117.
+[^Du2025CosyVoice]: {CosyVoice 3: Towards in-the-Wild Speech Generation via Scaling-Up and Post-Training}. arXiv:2505.17589.
+[^Anastassiou2024Seed-Tts]: {Seed-Tts: A Family of High-Quality Versatile Speech Generation Models}. arXiv:2406.02430.
+[^Chen2025Neural]: {Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers}. IEEE Transactions on Audio, Speech and Language Processing 2025.
+[^D{\'e}fossez2023High]: {High Fidelity Neural Audio Compression}. Transactions on Machine Learning Research 2023.
+[^Zhang2023Speak]: {Speak Foreign Languages With Your Own Voice: Cross-Lingual Neural Codec Language Modeling}. arXiv:2303.03926.
+[^Chen2024Vall-E]: {VALL-E 2: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers}. arXiv:2406.05370.
+[^Du2024CosyVoice]: {CosyVoice: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens}. arXiv:2407.05407.
+[^Wang2025MaskGCT]: {MaskGCT: Zero-Shot Text-to-Speech With Masked Generative Codec Transformer}. International Conference on Learning Representations 2025.
+[^Copet2023Simple]: {Simple and Controllable Music Generation}. Neural Information Processing Systems 2023.
+[^D{\'e}fossez2024Moshi]: {Moshi: A Speech-Text Foundation Model for Real-Time Dialogue}. arXiv:2410.00037.
+[^Casanova2024Xtts]: {XTTS: A Massively Multilingual Zero-Shot Text-to-Speech Model}. Interspeech 2024 2024.
+[^Wang2024StreamVoice]: {StreamVoice: Streamable Context-Aware Language Modeling for Real-Time Zero-Shot Voice Conversion}. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics 2024.
+[^Zhang2025Vevo]: {Vevo: Controllable Zero-Shot Voice Imitation With Self-Supervised Disentanglement}. International Conference on Learning Representations 2025.
+[^Tomashenko2024The]: {The VoicePrivacy 2024 Challenge Evaluation Plan}. arXiv:2404.02677.
+[^Choi2024Self-Supervised]: {Self-Supervised Speech Representations Are More Phonetic Than Semantic}. Interspeech 2024 2024.
+[^Lin2021S2vc]: {S2VC: A Framework for Any-to-Any Voice Conversion With Self-Supervised Pretrained Representations}. Interspeech 2021 2021.
+[^Huang2022S3prl-Vc]: {S3prl-Vc: Open-Source Voice Conversion Framework With Self-Supervised Speech Representations}. IEEE International Conference on Acoustics, Speech and Signal Processing 2022.
+[^Van2017Neural]: {Neural Discrete Representation Learning}. Advances in Neural Information Processing Systems 2017.
+[^Vaswani2017Attention]: {Attention Is All You Need}. Advances in Neural Information Processing Systems 2017.
+[^Alayrac2022Flamingo]: {Flamingo: A Visual Language Model for Few-Shot Learning}. Advances in Neural Information Processing Systems 2022.
+[^Shen2024NaturalSpeech]: {NaturalSpeech 2: Latent Diffusion Models Are Natural and Zero-Shot Speech and Singing Synthesizers}. International Conference on Learning Representations 2024.
+[^Kong2020HiFi-GAN]: {HiFi-GAN: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis}. Advances in Neural Information Processing Systems 2020.
+[^Zen2019LibriTTS]: {LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech}. Proc. Interspeech 2019 2019.
+[^Ardila2020Common]: {Common Voice: A Massively-Multilingual Speech Corpus}. Proceedings of the Twelfth Language Resources and Evaluation Conference 2020.
+[^Pratap2020Mls]: {MLS: A Large-Scale Multilingual Dataset for Speech Research}. Interspeech 2020 2020.
+[^Kominek2003Cmu]: {CMU ARCTIC Databases for Speech Synthesis}. 
+[^Wester2011The]: {The EMIME Mandarin Bilingual Database}. 
+[^Panayotov2015Librispeech]: {Librispeech: An ASR Corpus Based on Public Domain Audio Books}. IEEE International Conference on Acoustics, Speech and Signal Processing 2015.
+[^Nagrani2017VoxCeleb]: {VoxCeleb: A Large-Scale Speaker Identification Dataset}. Proc. Interspeech 2017 2017.
+[^Chung2018VoxCeleb2]: {VoxCeleb2: Deep Speaker Recognition}. Interspeech 2018 2018.
+[^Qian2022ContentVec]: {ContentVec: An Improved Self-Supervised Speech Representation by Disentangling Speakers}. International Conference on Machine Learning 2022.
+[^Radford2019Language]: {Language Models Are Unsupervised Multitask Learners}. OpenAI Blog 2019.
+[^Gu2024Multi-Scale]: {Multi-Scale Sub-Band Constant-Q Transform Discriminator for High-Fidelity Vocoder}. IEEE International Conference on Acoustics, Speech and Signal Processing 2024.
+[^Chen2022WavLM]: {WavLM: Large-Scale Self-Supervised Pre-Training for Full Stack Speech Processing}. IEEE Journal of Selected Topics in Signal Processing 2022.
+[^Baba2024The]: {The T05 System for the {V}oice{MOS} {C}hallenge 2024: Transfer Learning From Deep Image Classifier to Naturalness {MOS} Prediction of High-Quality Synthetic Speech}. IEEE Spoken Language Technology Workshop (SLT) 2024.
+[^Rosenberg2017Bias]: {Bias and Statistical Significance in Evaluating Speech Synthesis With Mean Opinion Scores}. Interspeech 2017 2017.
+[^Cooper2025Good]: {Good Practices for Evaluation of Synthesized Speech}. arXiv:2503.03250.
+[^Desplanques2020Ecapa-Tdnn]: {ECAPA-TDNN: Emphasized Channel Attention, Propagation and Aggregation in TDNN Based Speaker Verification}. Interspeech 2020 2020.
+[^Kaplan2020Scaling]: {Scaling Laws for Neural Language Models}. arXiv:2001.08361.
+[^He2016Deep]: {Deep Residual Learning for Image Recognition}. Proceedings of 2016 IEEE Conference on Computer Vision and Pattern Recognition 2016.
