更新 Pureformer-VC 背景

--- a/Models/-VC/2025.06.10_Pureformer-VC.md
+++ b/Models/-VC/2025.06.10_Pureformer-VC.md
@@ -110,7 +110,7 @@ However, current methods—such as the forced decomposition in **SpeechSplit**[^
 
 <!--
 We propose that an effective and practical disentangled voice conversion framework, based on an encoder-decoder architecture, must be fundamentally grounded in three essential principles: (1) encoders and decoders with distinct roles, (2) an optimization objective that enhances representational discriminability, and (3) an efficient style transfer module within the decoder to merge speech components and enable precise speech reconstruction.
-In recent years, the most effective architectures in the field of speech model backbones have been several enhanced transformer-based networks, such as Conformer[^Gulati2020Conformer], Paraformer[^Gao2022Paraformer], and Zipformer[^Yao2023Zipformer].
+In recent years, the most effective architectures in the field of speech model backbones have been several enhanced transformer-based networks, such as **Conformer**[^Gulati2020Conformer], **Paraformer**[^Gao2022Paraformer], and **Zipformer**[^Yao2023Zipformer].
 These models have shown exceptional sequence modeling capabilities and have achieved significant success in applications such as automatic speech recognition[^An2024Paraformer-V2], speaker verification[^Zhang2022Mfa-Conformer], [^Liu2022Mfa], and speech enhancement[^Kim2021SE-Conformer], [^Abdulatif2024Cmgan].
 Consequently, we believe that constructing a VC framework utilizing Transformer-based networks is feasible.
 -->
@@ -119,88 +119,128 @@ Consequently, we believe that constructing a VC framework utilizing Transformer-
 (2) 增强表示辨别能力的优化目标,
 (3) 解码器中包含高效的风格迁移模块, 以合并语音组分并实现精确语音重构.
 
-近年来, 在语音模型主干网络领域中最有效的架构是基于 Transformer 的增强网络, 例如 Conformer[^Gulati2020Conformer], Paraformer[^Gao2022Paraformer], 和 Zipformer[^Yao2023Zipformer].
+近年来, 在语音模型主干网络领域中最有效的架构是基于 Transformer 的增强网络, 例如 **Conformer**[^Gulati2020Conformer], **Paraformer**[^Gao2022Paraformer], 和 **Zipformer**[^Yao2023Zipformer].
 这些模型展示出了出色的序列建模能力并在自动语音识别[^An2024Paraformer-V2], 说话人验证[^Zhang2022Mfa-Conformer], [^Liu2022Mfa], 和语音增强[^Kim2021SE-Conformer], [^Abdulatif2024Cmgan] 等应用中取得了显著的成功.
 因此, 我们认为, 利用基于 Transformer 的网络构造声音转换框架是可行的.
 
 <!--
 Building on the previous discussion, we present ***Pureformer-VC*** as a comprehensive solution for a practical VC framework with three technical approaches.
-For the first approach, we design a specialized content encoder that combines Conformer blocks with IN operations.
+For the first approach, we design a specialized content encoder that combines **Conformer** blocks with IN operations.
 This structure enhances the model's ability to represent linguistic information through normalized distributions while filtering out speaker characteristics.
-For the decoder, we utilize Zipformer blocks, which have shown exceptional performance in speech acoustic modeling tasks, to ensure high-quality synthesis output.
-For the second approach, we integrate the Attention Style Transfer Mechanism (ASTM) [^Wu2021Styleformer] within the Zipformer blocks, effectively incorporating speaker information into generated speech.
-The speaker encoder is likewise constructed using Conformer blocks but omits IN to prevent the potential filtering of speaker information.
+For the decoder, we utilize **Zipformer** blocks, which have shown exceptional performance in speech acoustic modeling tasks, to ensure high-quality synthesis output.
+For the second approach, we integrate the Attention Style Transfer Mechanism (ASTM) [^Wu2021Styleformer] within the **Zipformer** blocks, effectively incorporating speaker information into generated speech.
+The speaker encoder is likewise constructed using **Conformer** blocks but omits IN to prevent the potential filtering of speaker information.
 For the final approach, we introduce a triplet loss [^Hermans2017In] alongside the reconstruction loss, allowing the model to learn and maintain distinct distances between utterances of different timbres.
 In summary, this paper's main contributions are as follows.
 -  We proposed a one-shot, many-to-many VC framework called ***Pureformer-VC***.
 The key modules are constructed using advanced speech encoding blocks, which assist in preserving the reconstruction quality.
--  To enhance style transfer, the shared weights in Zipformer are implemented using the ASTM in Styleformer.
+-  To enhance style transfer, the shared weights in **Zipformer** are implemented using the ASTM in Styleformer.
 -  We conducted one-shot and many-to-many voice conversion experiments on the VCTK and AISHELL-3 datasets.
 The evaluation results indicate that our proposed method achieves comparable or even superior results in various voice conversion scenarios compared to existing methods.
 -->
 在前述讨论的基础上, 我们提出了 ***Pureformer-VC*** 作为一个面向实用语音转换框架的综合解决方案, 并采用了三种技术方法.
-1. 我们设计了一个专用的内容编码器, 结合了 Conformer 块和实例归一化 (IN) 操作.
+1. 我们设计了一个专用的内容编码器, 结合了 **Conformer** 块和实例归一化 (IN) 操作.
 这一结构通过归一化分布增强了模型表示语言学信息的能力同时过滤掉说话人特征.
-对于解码器, 我们使用了 Zipformer 块, 其在语音声学建模任务中的表现卓越, 以确保高质量的合成输出.
-2. 我们在 Zipformer 块中集成了 Attention Style Transfer Mechanism (ASTM) [^Wu2021Styleformer], 有效地将说话人信息集成到生成的语音中.
-说话人编码器则类似地使用 Conformer 块但省略了实例归一化, 以防止潜在的说话人信息过滤.
+对于解码器, 我们使用了 **Zipformer** 块, 其在语音声学建模任务中的表现卓越, 以确保高质量的合成输出.
+2. 我们在 **Zipformer** 块中集成了 **Attention Style Transfer Mechanism (ASTM)**[^Wu2021Styleformer], 有效地将说话人信息集成到生成的语音中.
+说话人编码器则类似地使用 **Conformer** 块但省略了实例归一化, 以防止潜在的说话人信息过滤.
 3. 我们引入了三元损失 [^Hermans2017In] 与重构损失相结合, 使模型能够学习和维护不同音色之间的不同距离.
 
 总而言之, 本文的主要贡献如下:
 - 我们提出了一个单样本, 多对多的声音转换框架 ***Pureformer-VC***.
 关键模块是基于先进语音编码块构造的, 它们协助保持重构质量.
-- 为了增强风格迁移, 在 Styleformer 的 ASTM 基础上利用 Zipformer 的共享权重.
+- 为了增强风格迁移, 在 Styleformer 的 ASTM 基础上利用 **Zipformer** 的共享权重.
 - 我们在 VCTK 和 AISHELL-3 数据集上构造了单样本和多对多声音转换实验.
 评估结果表明, 和现有方法相比, 我们提出的方法在多种声音转换场景中都能取得相当或甚至更好的结果.
 
-## 2·Related Work
+## 2·背景
 
-### Voice Conversion
+### 声音转换
 
+<!--
 Voice conversion (VC) model training can be broadly categorized into parallel and non-parallel approaches.
 Early parallel methods relied on utterances with identical content but varying timbres to map features.
 Techniques such as Gaussian Mixture Models (GMM-VC)[^Toda2007Voice], Directional Kernel Partial Least Squares (DKPLS)[^Helander2010Voice], Vector Quantization-based VC (VQ-VC)[^Wu2020One-Shot], frequency warping[^Erro2009Voice], and Non-Negative Matrix Factorization (NMF)[^Aihara2014Exemplar-Based] were frequently employed.
 However, these approaches often yielded overly smooth outputs and demonstrated weak generative performance.
 Recent technological advancements have triggered a paradigm shift toward non-parallel voice conversion, which can be systematically classified into two primary research directions:
+-->
+声音转换模型训练可以大致分为并行和非并行方法.
+早期并行方法依赖于具有相同内容但不同音色的语句来映射特征.
+诸如基于**高斯混合模型 (Gaussian Mixture Model, GMM)** 的方法 [^Toda2007Voice], **方向核部分最小二乘 (Directional Kernel Partial Least Squares, DKPLS)** 方法 [^Helander2010Voice], **基于矢量量化的声音转换 (Vector Quantization-based Voice Conversion, VQ-VC)** 方法 [^Wu2020One-Shot], **频率扭曲 (Frequency Warping)** 方法 [^Erro2009Voice], 和 **非负矩阵分解 (Non-Negative Matrix Factorization, NMF)** 方法 [^Aihara2014Exemplar-Based] 等技术被广泛使用.
+然而, 这些方法通常产生过度平滑的输出, 并表现出较弱的生成性能.
 
+近年来的技术进步引发了向非并行声音转换的范式转变, 其可以被系统性地分为两个主要研究方向:
+
+<!--
 **Domain Transfer.**
-
-Domain transfer-based VC models, such as the series models of StarGAN-VC and CycleGAN-VC, treat each timbre as a domain and employ cyclic adversarial training to transform features across domains.
+Domain transfer-based VC models, such as the series models of **StarGAN-VC** and **CycleGAN-VC**, treat each timbre as a domain and employ cyclic adversarial training to transform features across domains.
 This method facilitates the generation of more realistic and diverse speech outputs.
 A framework based on generative adversarial networks (GANs) has proven effective for non-parallel conversion.
+-->
+**领域迁移.**
+基于领域迁移的声音转换模型, 例如 **StarGAN-VC** 和 **CycleGAN-VC** 的系列模型, 将每个音色视为一个领域, 并采用循环对抗训练实现领域间特征转换.
+这种方法促进了生成更真实和多样化的语音输出.
+基于生成对抗网络 (GAN) 的框架已经证明了非并行转换的有效性.
 
+<!--
 **Information Disentanglement.**
-
 Information disentanglement seeks to break down speech into distinct components through an encoder, including content, timbre, pitch, and rhythm, thereby allowing flexible recombination by a decoder.
-Representative models, such as INVC, SpeechSplit, and MAIN-VC [^Li2024Main-Vc], utilize techniques like IN and mutual information estimation to achieve effective disentanglement and reconstruction.
+Representative models, such as **INVC**, **SpeechSplit**, and **MAIN-VC**[^Li2024Main-Vc], utilize techniques like IN and mutual information estimation to achieve effective disentanglement and reconstruction.
+-->
+**信息解耦**
+信息解耦旨在将语音通过编码器分解为不同组分, 包括内容, 音色, 音高, 韵律, 然后在解码器中灵活重组.
+代表性模型, 例如 **INVC**, **SpeechSplit**, 和 **MAIN-VC**[^Li2024Main-Vc], 采用诸如 IN 和互信息估计等技术实现有效的解耦和重构.
 
+<!--
 **Generative VC.**
-
 We consider recent VC methods based on generative theory to be generative VC approaches, which include flow-based VC [^Van2022Comparison], [^Casanova2022Yourtts], KNN-based VC [^Baas2023Voice], [^Shao2025kNN-SVC], and GLL-VC (including GPT-SoVITS, etc.).
 In the voice conversion stage, flow-based models can invert the semantics of speech into textual information and then convert it back into speech with a new timbre.
 The KNN-based VC replaces the source speech's deep speech unit vectors with the given target speech.
 The GLL-VC models pretrain the discrete speech semantic representations using regression training and predict different speech timbres based on reference speech prompts.
 This evolution from parallel to non-parallel methods emphasizes the shift toward models with enhanced flexibility, robustness, and generative capabilities in VC tasks.
 Formally, most non-parallel VC models can be represented as $y=G(x_{s},x_{y})$, where $x_{s}$ represents the speech providing the content and $x_{y}$ represents the speech supplying the speaker's voice characteristics.
+-->
 
-### Style Transfer Learning in VC
+**生成式声音转换.**
+我们将基于生成式理论的近期声音转换方法称为生成式声音转换方法, 包括基于流的声音转换 [^Van2022Comparison], [^Casanova2022Yourtts], 基于 KNN 的声音转换 [^Baas2023Voice], [^Shao2025kNN-SVC], 和 GLL-VC (包括 GPT-SoVITS 等).
+在声音转换阶段, 基于流的模型可以将语音的语义反向映射到文本信息, 然后将它转换回具有新音色的语音.
+基于 KNN 的方法将源语音的深度语音单元向量替换为给定的目标语音.
+基于 GLL 的模型使用回归训练预训练离散语音语义表示, 并基于参考语音提示预测不同语音音色.
 
+这种从并行到非并行方法的演化强调了向具有增强灵活性, 鲁棒性和生成能力的模型转变的趋势.
+形式上, 绝大多数非并行声音转换模型可以表示为 $y=G(x_{s},x_{y})$, 其中 $x_{s}$ 表示提供内容的语音, $x_{y}$ 表示提供说话者声音特征的语音.
+
+### 声音转换中的风格迁移学习
+
+<!--
 Style transfer learning teaches VC models to merge various speech representations.
 Accordingly, the style transfer function accepts both source speaker-independent and target speaker-dependent representations.
-Chou et al. [^Chou2019One-Shot] were the first to discover that IN can filter out speaker information while retaining the source content from original utterances in INVC.
-Subsequently, the IN function found widespread application in GANs-based VC. [^Kaneko2019Stargan-Vc2], [^Li2021Starganv2-Vc].
-Furthermore, the WadaIN method implements affine operations on the convolutional kernel in Convolutional Neural Networks (CNNs), modifying the style of source data in WadaIN-VC [^Chen2021Towards] by convolving the source data.
+Chou et al. [^Chou2019One-Shot] were the first to discover that IN can filter out speaker information while retaining the source content from original utterances in **INVC**.
+Subsequently, the IN function found widespread application in GANs-based VC [^Kaneko2019Stargan-Vc2], [^Li2021Starganv2-Vc].
+Furthermore, the **WadaIN** method implements affine operations on the convolutional kernel in Convolutional Neural Networks (CNNs), modifying the style of source data in **WadaIN-VC** [^Chen2021Towards] by convolving the source data.
 However, these models depend on CNN architectures and exhibit limited reconstruction capabilities.
-To leverage the self-attention mechanism in Transformers, the Attention-AdaIN-VC [^Ke2022New] incorporated the styleformer block within the CNN blocks, achieving improved VC performance.
-In styleformer [^Wu2021Styleformer], self-attention weights are stylized using speaker representations, successfully training an image style transfer model.
-In the styleformer's blocks, ASTM is commonly used to integrate individual embedding with self-attention layers.
-We typically incorporate ASTM into our decoder as a style transfer module.
+To leverage the self-attention mechanism in **Transformers**, the **Attention-AdaIN-VC**[^Ke2022New] incorporated the **Styleformer** block within the CNN blocks, achieving improved VC performance.
+In **Styleformer**[^Wu2021Styleformer], self-attention weights are stylized using speaker representations, successfully training an image style transfer model.
+In the **Styleformer**'s blocks, **ASTM** is commonly used to integrate individual embedding with self-attention layers.
+We typically incorporate **ASTM** into our decoder as a style transfer module.
+-->
 
-![](figs/vaeformer.pdf)
+风格迁移学习教导声音转换模型合并各种语音表示.
+风格迁移函数可以同时接受和源说话人无关和目标说话人相关的表示.
+**INVC** [^Chou2019One-Shot] 首次发现 IN 可以过从原始语句中过滤掉说话人信息而保留源内容.
+随后, IN 函数被广泛应用于基于 GAN 的声音转换模型 [^Kaneko2019Stargan-Vc2], [^Li2021Starganv2-Vc].
+此外, **WadaIN** 方法在卷积神经网络的卷积核上实现仿射操作, **WadaIN-VC**[^Chen2021Towards] 通过对源数据卷积修改源数据风格.
+但是, 这些模型依赖于 CNN 架构, 并表现出有限的重构能力.
 
-<a id='fig:1'>The architecture of ***Pureformer-VC***.</a>
+为了利用 **Transformer** 中的自注意力机制, **Attention-AdaIN-VC**[^Ke2022New] 将 **Styleformer** 块集成到 CNN 块中, 实现了更好的声音转换性能.
+在 **Styleformer**[^Wu2021Styleformer] 中, 自注意力权重通过说话人表示进行风格化, 成功训练了图像风格迁移模型.
+在 **Styleformer** 的块中, **ASTM** 通常被用于将单独的嵌入与自注意力层集成.
+我们通常将 **ASTM** 集成到解码器中作为风格迁移模块.
 
 ## 3·Methodology
+
+![](_Images/2025.06.10_Pureformer-VC_Fig.01.png)
+<a id='fig:1'>The architecture of ***Pureformer-VC***.</a>
 
 ### Overall Architecture
 
@@ -217,7 +257,7 @@ It is important to note that *e* is a random variable that follows the standard 
 ### Content Encoder with VAE Training
 
 The content encoder parameterizes and approximates the variational distribution of $q_{\phi}(z|x)$.
-Each Conformer block was constructed **with an IN function** and an AveragePooling1D layer following the convolution module to reduce the time dimension by half.
+Each **Conformer** block was constructed **with an IN function** and an AveragePooling1D layer following the convolution module to reduce the time dimension by half.
 There are four continuous blocks as shown in Figure [fig:1](#fig:1) (a); thus, the output spectrogram's frame length is decreased by 16.
 Finally, the content encoder outputs the reparameterization of the content representation by two convolution layers:
 
@@ -229,7 +269,7 @@ r_{c} &= r_{m} + *e**r_{s}
 \end{aligned}
 $$
 
-The $Mean\_Conv$ and $ Std\_Conv$ denote the two convolution layers after the output $h_{enc}$ of Conformer blocks.
+The $Mean\_Conv$ and $ Std\_Conv$ denote the two convolution layers after the output $h_{enc}$ of **Conformer** blocks.
 Thus, the variable $r_{c}$ follows a normal distribution with mean $ r_{m}$ and variance $r_{s}$.
 The reparameterization operation ensures that the speech latent variables input into the decoder remain typically distributed while also preserving the gradient propagation in the model.
 It turns out to optimize the Evidence Lower Bound (ELBO)[^Zhu2020Batch] of $log (p(x))$:
@@ -256,10 +296,10 @@ The $r_{c}$ is derived from the input mel-spectrogram $x$.
 ### ASTM in Decoder
 
 ASTM aids the decoder in learning the timbral characteristics of the target speech.
-We built the decoder using 4 Zipformer blocks with ASTM, as illustrated in Figure [fig:1](#fig:1)(b).
+We built the decoder using 4 **Zipformer** blocks with ASTM, as illustrated in Figure [fig:1](#fig:1)(b).
 The decoder merges the content and timbre representations of the speech.
 
-To generate speech with diverse voice styles, we apply the ASTM to the weights in the self-attention mechanism of Zipformer blocks.
+To generate speech with diverse voice styles, we apply the ASTM to the weights in the self-attention mechanism of **Zipformer** blocks.
 During the model initialization phase, the ASTM initially sets some attention weights $w_{q}, w_{k}, w_{v}, w_{u}$.
 These weights are infused with the style characteristics of the split speaker embedding vector $s_{1}, s_{2} = split(E_{s}(x))$ as follows:
 
@@ -297,8 +337,8 @@ The stylized attention output is connected residually.
 ### Speaker Encoder with AAM-Softmax Loss
 
 The speaker encoder is designed to extract timbre representations from mel-spectrograms, allowing the model to capture speaker-specific features that are critical for VC.
-For its backbone, we use a structure made up of several Conformer blocks from MFA-Conformer[^Zhang2022Mfa-Conformer].
-Importantly, these Conformer blocks are configured **without the IN functions** to ensure the preservation of speaker-related information.
+For its backbone, we use a structure made up of several **Conformer** blocks from MFA-Conformer[^Zhang2022Mfa-Conformer].
+Importantly, these **Conformer** blocks are configured **without the IN functions** to ensure the preservation of speaker-related information.
 
 To further enhance the quality of the extracted embeddings, we incorporate the Additive Angular Margin Softmax (AAM-softmax) layer.
 This parameterized loss function optimizes the learning of compact and well-separated clusters in the embedding space for different speakers.
